Bug 951829 - new mozContact().id should be the empty string r=reuben

--- a/dom/contacts/tests/test_contacts_basics2.html
+++ b/dom/contacts/tests/test_contacts_basics2.html
@@ -1123,6 +1123,12 @@ var steps = [
   },
   clearDatabase,
   function () {
+    info("undefined id");
+    var c = new mozContact();
+    ise(c.id, "");
+    next();
+  },
+  function () {
     ok(true, "all done!\n");
     SimpleTest.finish();
   }
